--- a/xllmonte.vcxproj.filters
+++ b/xllmonte.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="xllmonte_mean.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="xll_stdev.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
