--- a/xllmonte.vcxproj
+++ b/xllmonte.vcxproj
@@ -173,12 +173,13 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="xllmonte.h" />
+    <ClInclude Include="monte.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="xllmonte_mean.cpp" />
-    <ClCompile Include="xllmonte.cpp" />
-    <ClCompile Include="xll_stdev.cpp" />
+    <ClCompile Include="mean.cpp" />
+    <ClCompile Include="monte.cpp" />
+    <ClCompile Include="stdev.cpp" />
+    <ClCompile Include="when.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
